removed image from modal, added node sass & hacked scss to ensure all elems are of same size on mobile view

--- a/client/src/components/RecipeModal/style.module.css
+++ b/client/src/components/RecipeModal/style.module.css
@@ -52,7 +52,7 @@
 }
 
 .recipe_image {
-  width: 100%;
+  width: fit-content;
   height: 100%;
   object-fit: cover;
   border-radius: 1%;
